test/patterns_bak/s0164_maximum_gap/hafis/starchat/jml_syntax_checking.txt
./test/s0164_maximum_gap/hafis/starchat/Solution.java:12: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 1000000000) && (nums >= 0)));
                                                         ^
  first type:  int[]
  second type: int
./test/s0164_maximum_gap/hafis/starchat/Solution.java:12: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 1000000000) && (nums >= 0)));
                                                                                 ^
  first type:  int[]
  second type: int
./test/s0164_maximum_gap/hafis/starchat/Solution.java:14: error: array required, but int found
//@ ensures((\forall int i; 0 <= i < nums.length; nums[i] == 10[i]) ==> (\result == 0));
                                                             ^
3 errors
